# Nuts

./: .gitignore  pyproject.toml
backend/: .env.example  .env.prod  .gitignore  Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  requirements.txt
backend/about/: __init__.py  admin.py  apps.py  models.py  tests.py  views.py
backend/about/blocks/: __init__.py  about_page.py  delivery_page.py  wholesale_page.py
backend/about/migrations/: 0001_initial.py  0002_alter_aboutpage_options_alter_deliverypage_options_and_more.py  0003_alter_aboutpage_body_alter_deliverypage_body_and_more.py  __init__.py
backend/contacts/: __init__.py  admin.py  apps.py  blocks.py  models.py  tests.py  views.py
backend/contacts/migrations/: 0001_initial.py  0002_alter_contactpage_options_alter_contactpage_body.py  0003_alter_contactpage_options_alter_contactpage_body.py
backend/core/: __init__.py  admin.py  apps.py  models.py  tests.py  translation.py  views.py
backend/core/migrations/: 0001_initial.py  0002_sitesettings_call_text_en_sitesettings_call_text_ru_and_more.py  0003_alter_sitesettings_call_text_and_more.py  0004_alter_socialmedialink_options_and_more.py
backend/core/templatetags/: __init__.py  i18n_tags.py  navigation_tags.py
backend/gallery/: __init__.py  admin.py  apps.py  blocks.py  models.py  tests.py  views.py
backend/gallery/migrations/: 0001_initial.py  0002_alter_gallerypage_options_alter_gallerypage_body.py  0003_alter_gallerypage_body.py  __init__.py
backend/home/: __init__.py  apps.py  blocks.py  models.py  tests.py
backend/home/migrations/: 0001_initial.py  0002_alter_homepage_options_alter_homepage_body.py  0003_alter_homepage_body.py  0004_alter_homepage_body.py  __init__.py
backend/home/templatetags/: i18n_tags.py  navigation_tags.py
backend/mysite/: __init__.py  celery.py  storage.py  urls.py  wsgi.py
backend/mysite/settings/: __init__.py  base.py  dev.py  production.py
backend/news/: __init__.py  admin.py  apps.py  blocks.py  models.py  tests.py  views.py
backend/news/migrations/: 0001_initial.py  0002_alter_newsindexpage_footer_blocks_and_more.py  0003_alter_newspage_options_and_more.py  __init__.py
backend/search/: __init__.py  views.py
backend/shop/: __init__.py  admin.py  api.py  apps.py  blocks.py  forms.py  tests.py  translation.py  urls.py  views.py
backend/shop/migrations/: 0001_initial.py  0002_remove_shopindexpage_custom_title_and_more.py  0003_shopindexpage_custom_title_shopindexpage_hero_image_and_more.py  0004_productweight_remove_product_image_and_more.py  0005_productgalleryimage_position.py  0006_productpage.py  0007_productpage_content_blocks_alter_productpage_body.py  0008_alter_productgalleryimage_options_and_more.py  0009_remove_product_description.py  0010_product_composition_en_product_composition_ru_and_more.py  0011_alter_productpage_product.py  0012_product_slug_en_product_slug_ru_product_slug_uk_and_more.py  0013_shopindexpage_body.py  0014_remove_shopindexpage_custom_title_and_more.py  0015_remove_productpage_content_blocks_and_more.py  0016_remove_shopindexpage_global_product_tabs.py  0017_alter_product_storage_conditions_and_more.py  0018_alter_productgalleryimage_options_and_more.py  0019_alter_productgalleryimage_sort_order.py  0020_remove_productgalleryimage_caption_and_more.py  0021_cart_cartitem_order_orderitem_ordersuccesspage_and_more.py  0022_cartpage_checkoutpage.py  0023_cartpage_manager_phone_cartpage_manager_title.py  0024_remove_ordersuccesspage_background_image_and_more.py  0025_shopindexpage_products_per_page_and_more.py  0026_alter_cart_user.py  0027_productpackaging_name_en_productpackaging_name_ru_and_more.py  __init__.py
backend/shop/models/: __init__.py  ecommerce.py  products.py  snippets.py
backend/users/: __init__.py  admin.py  api.py  apps.py  backends.py  forms.py  middleware.py  tasks.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_profilepage.py  __init__.py  (+4 more)
frontend/: package-lock.json  package.json  vite.config.js
nginx/: nginx.conf
templates/: 404.html  base.html
templates/about/: about_page.html  delivery_page.html  wholesale_page.html
templates/contacts/: contact_page.html
templates/gallery/: gallery_page.html
templates/home/: home_page.html
templates/includes/: breadcrumbs.html  footer.html  header.html  popup_cart.html
templates/news/: news_index_page.html  news_page.html
templates/shop/: cart.html  checkout.html  order_success_page.html  payment.html  product_page.html  shop_index_page.html
templates/users/: login.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile_address.html  profile_contact_info.html  profile_orders.html  profile_password.html  profile_transactions.html  register.html  terms_of_use_page.html
(+66 files in other folders)
