[project]
name = "nuts"
version = "0.1.0"
description = ""
authors = [
    {name = "sasha",email = "sashavipro@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "wagtail (>=7.2.1,<8.0.0)",
    "wagtailmedia (>=0.17.2,<0.18.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "django-unfold (>=0.78.1,<0.79.0)",
    "django-countries (>=8.2.0,<9.0.0)",
    "django-cities-light (>=3.10.2,<4.0.0)",
    "django-select2 (>=8.4.8,<9.0.0)",
    "django-ninja (>=1.5.3,<2.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.1,<8.0.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "django-modeltranslation (>=0.19.19,<0.20.0)",
    "django-vite (>=3.1.0,<4.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
